--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/code-input": "^4.1.1",
+    "@sanity/table": "^1.0.1",
     "@sanity/vision": "^3.20.2",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
